--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-hello world
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portafolio de Ismael Olaza</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body class="fondo-claro">
+
+    <header class="encabezado">
+        <h1>Ismael Olaza</h1>
+        <p>Hola!. Por aqui vas a encontrar mis primeros pasos en el mundo del desarrollo web. Siempre me intereso mucho el mundo de la programacion, pero nunca me anime a dar el paso inicial. Ahora, en 2025, emprendi este camino a traves de JaP y estoy muy contento. Mis metas son terminar este año con la mayor cantidad de informacion para poder insertarme en el mercado laboral.</p>
+    </header>
+
+    <main class="contenedor-proyectos">
+        <!-- Proyecto 1 -->
+        <div id="proyecto1" class="proyecto tarjeta">
+            <h2>Primeros Pasos</h2>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpVVv8A7FDDkJ7YeLmmPjnZL9h9479mnptZQ&s" alt="Imagen del proyecto 1">
+            <p>Primer ejercicio trabajando con HTML, CSS y un poco de JS.</p>
+            <a href="https://drive.google.com/file/d/1_Qjsg7w0p82rKbdyfj7rnm5aBitmOQgP/view?usp=sharing" download> Descargar</a>
+        </div>
+
+        <!-- Proyecto 2 -->
+        <div id="proyecto2" class="proyecto tarjeta">
+            <h2>Trabajo grupal</h2>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpVVv8A7FDDkJ7YeLmmPjnZL9h9479mnptZQ&s" alt="Imagen del proyecto 1">
+            <p>Primer trabajito en grupo, trabajando en un CV, poniendo formularios y referencias.</p>
+            <a href="https://drive.google.com/file/d/1GBuXv2EML9vkHxgVuCEq6_7E0jIBQSyS/view?usp=sharing" download>Descargar</a>
+        </div>
+
+        <!-- Proyecto 3 -->
+        <div id="proyecto3" class="proyecto tarjeta">
+            <h2>CSS ejercicio 1</h2>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpVVv8A7FDDkJ7YeLmmPjnZL9h9479mnptZQ&s" alt="Imagen del proyecto 1">
+            <p>Trabajando con CSS, practicando selectores!</p>
+            <a href="https://drive.google.com/file/d/1c5w0Kv6FoL5gf4_SlWI_Op8QQs4QLxSh/view?usp=sharing" download> Descargar</a>
+        </div>
+    </main>
+
+    <footer class="pie">
+    
+
+    <div class="contacto">
+        <!-- Enlace a GitHub -->
+        <a href="https://github.com/olazaismael" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="icono">
+        </a>
+
+        <!-- Enlace a Correo -->
+        <a href="mailto:olazaismael@gmail.com">
+            <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email" class="icono">
+        </a>
+        <p>&copy; Ismael Olaza - 2025 </p>
+    </div>
+</footer>
+
+
+</body>
+</html>
